(library
 (public_name hyper.http)
 (name hyper__http)
 (libraries
  dream-httpaf
  dream-pure
  dream-httpaf.dream-h2
  dream-httpaf.dream-h2-lwt-unix
  dream-httpaf.dream-httpaf_
  dream-httpaf.dream-httpaf_-lwt-unix
  dream-httpaf.dream-websocketaf
  dream-httpaf.dream-websocketaf-lwt-unix
  mirage-crypto-rng
  mirage-crypto-rng-lwt
  uri
 )
 (preprocess (pps lwt_ppx))
 (instrumentation (backend bisect_ppx)))
